--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 </ul>
                 <div id="feedback"></div>
                 <button id="next-btn" onclick="nextQuestion()">다음 문제</button>
+                <button onClick="goToNextPage()">1</button>
             </div>
         </div>
     </div>
