--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,14 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-color: #f4f4f9;
         }
         .quiz-container {
             text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         .question {
             font-size: 24px;
@@ -32,6 +37,7 @@
             border: none;
             font-size: 18px;
             cursor: pointer;
+            border-radius: 5px;
         }
         .answers button:hover {
             background-color: #0056b3;
@@ -42,143 +48,155 @@
             color: green;
             display: none;
         }
+        .correct {
+            background-color: green !important;
+        }
+        .incorrect {
+            background-color: red !important;
+        }
+        #next-btn {
+            margin-top: 20px;
+            display: none;
+        }
     </style>
 </head>
 <body>
-    <div class="quiz-container">
-        <div id="question" class="question"></div>
-        <div class="answers" id="answers"></div>
-        <div id="explanation" class="explanation"></div>
-        <button id="next-btn" style="display:none; margin-top: 20px;">다음 문제로</button>
-    </div>
 
-    <script>
-        const quizData = [
-            {
-                question: "Emily sat silently, with the dog __________ at her feet.",
-                answers: ["dozing", "dozed", "doze", "does"],
-                correct: "dozing",
-                explanation: "문장에서 'with + 명사 + 분사' 구조를 사용하고 있습니다. 'dozing'은 현재 진행 중인 동작을 나타냅니다."
-            },
-            {
-                question: "By the time I finish that, I __________ the basics of genetic engineering.",
-                answers: ["will learn", "will be learning", "will have learned", "learn"],
-                correct: "will have learned",
-                explanation: "'By the time'은 미래 시점을 나타내기 때문에 미래완료 시제가 필요합니다."
-            },
-            {
-                question: "He __________ all set by the time you arrive.",
-                answers: ["has been", "will have been", "would have been", "will be"],
-                correct: "will have been",
-                explanation: "'will have been'은 미래의 특정 시점까지 완료된 상태를 나타냅니다."
-            },
-            {
-                question: "I wish we __________ more in Jeju-do then.",
-                answers: ["stay", "stayed", "had stayed", "would stay"],
-                correct: "had stayed",
-                explanation: "'I wish'는 가정법 과거완료로 사용되며, 과거의 후회를 나타냅니다."
-            },
-            {
-                question: "This is the new movie __________ many critics think will be nominated for the Academy Awards this year.",
-                answers: ["what", "which", "that", "who"],
-                correct: "which",
-                explanation: "'which'는 관계대명사로서 선행사를 수식하며, 이 경우는 비제한적 용법입니다."
-            },
-            {
-                question: "The truck sped away with smoke __________ out of it.",
-                answers: ["pours", "pouring", "poured", "pour"],
-                correct: "pouring",
-                explanation: "'with + 명사 + 분사'에서 현재 진행 중인 동작을 나타내는 현재분사 'pouring'이 맞습니다."
-            },
-            {
-                question: "I wish I __________ a famous movie star now.",
-                answers: ["was", "were", "am", "is"],
-                correct: "were",
-                explanation: "가정법에서는 'I'일지라도 'were'를 사용하여 현실과 반대되는 가정을 나타냅니다."
-            },
-            {
-                question: "By the end of the year, Amy __________ the designs before the next meeting.",
-                answers: ["will have completed", "will completed", "will be completing", "would have completed"],
-                correct: "will have completed",
-                explanation: "'by the end of the year'는 미래완료 시제를 요구합니다."
-            },
-            {
-                question: "With his book __________, he is standing by the bookshelf.",
-                answers: ["with", "closed", "is standing", "opened"],
-                correct: "closed",
-                explanation: "'with + 명사 + 분사'에서 분사 'closed'는 책이 닫힌 상태를 설명합니다."
-            },
-            {
-                question: "I talked with the scientist __________ people believe invented the new device.",
-                answers: ["that", "which", "who", "whom"],
-                correct: "who",
-                explanation: "'who'는 사람을 나타내는 관계대명사로서 올바른 사용입니다."
-            }
-        ];
+<div class="quiz-container">
+    <div id="question" class="question"></div>
+    <div class="answers" id="answers"></div>
+    <div id="explanation" class="explanation"></div>
+    <button id="next-btn">다음 문제로</button>
+</div>
 
-        let currentQuestionIndex = 0;
-        let score = 0;
-
-        function loadQuestion() {
-            const currentQuestion = quizData[currentQuestionIndex];
-            const questionElement = document.getElementById('question');
-            const answersElement = document.getElementById('answers');
-            const explanationElement = document.getElementById('explanation');
-            const nextBtn = document.getElementById('next-btn');
-
-            questionElement.innerText = currentQuestion.question;
-            answersElement.innerHTML = '';
-            explanationElement.style.display = 'none';
-            explanationElement.innerText = '';
-
-            currentQuestion.answers.forEach(answer => {
-                const button = document.createElement('button');
-                button.innerText = answer;
-                button.addEventListener('click', () => checkAnswer(answer, button));
-                answersElement.appendChild(button);
-            });
-
-            nextBtn.style.display = 'none';
+<script>
+    const quizData = [
+        {
+            question: "Emily sat silently, with the dog __________ at her feet.",
+            answers: ["dozing", "dozed", "doze", "does"],
+            correct: "dozing",
+            explanation: "문장에서 'with + 명사 + 분사' 구조를 사용하고 있습니다. 'dozing'은 현재 진행 중인 동작을 나타냅니다."
+        },
+        {
+            question: "By the time I finish that, I __________ the basics of genetic engineering.",
+            answers: ["will learn", "will be learning", "will have learned", "learn"],
+            correct: "will have learned",
+            explanation: "'By the time'은 미래 시점을 나타내기 때문에 미래완료 시제가 필요합니다."
+        },
+        {
+            question: "He __________ all set by the time you arrive.",
+            answers: ["has been", "will have been", "would have been", "will be"],
+            correct: "will have been",
+            explanation: "'will have been'은 미래의 특정 시점까지 완료된 상태를 나타냅니다."
+        },
+        {
+            question: "I wish we __________ more in Jeju-do then.",
+            answers: ["stay", "stayed", "had stayed", "would stay"],
+            correct: "had stayed",
+            explanation: "'I wish'는 가정법 과거완료로 사용되며, 과거의 후회를 나타냅니다."
+        },
+        {
+            question: "This is the new movie __________ many critics think will be nominated for the Academy Awards this year.",
+            answers: ["what", "which", "that", "who"],
+            correct: "which",
+            explanation: "'which'는 관계대명사로서 선행사를 수식하며, 이 경우는 비제한적 용법입니다."
+        },
+        {
+            question: "The truck sped away with smoke __________ out of it.",
+            answers: ["pours", "pouring", "poured", "pour"],
+            correct: "pouring",
+            explanation: "'with + 명사 + 분사'에서 현재 진행 중인 동작을 나타내는 현재분사 'pouring'이 맞습니다."
+        },
+        {
+            question: "I wish I __________ a famous movie star now.",
+            answers: ["was", "were", "am", "is"],
+            correct: "were",
+            explanation: "가정법에서는 'I'일지라도 'were'를 사용하여 현실과 반대되는 가정을 나타냅니다."
+        },
+        {
+            question: "By the end of the year, Amy __________ the designs before the next meeting.",
+            answers: ["will have completed", "will completed", "will be completing", "would have completed"],
+            correct: "will have completed",
+            explanation: "'by the end of the year'는 미래완료 시제를 요구합니다."
+        },
+        {
+            question: "With his book __________, he is standing by the bookshelf.",
+            answers: ["with", "closed", "is standing", "opened"],
+            correct: "closed",
+            explanation: "'with + 명사 + 분사'에서 분사 'closed'는 책이 닫힌 상태를 설명합니다."
+        },
+        {
+            question: "I talked with the scientist __________ people believe invented the new device.",
+            answers: ["that", "which", "who", "whom"],
+            correct: "who",
+            explanation: "'who'는 사람을 나타내는 관계대명사로서 올바른 사용입니다."
         }
+    ];
 
-        function checkAnswer(selectedAnswer, button) {
-            const currentQuestion = quizData[currentQuestionIndex];
-            const explanationElement = document.getElementById('explanation');
-            const nextBtn = document.getElementById('next-btn');
+    let currentQuestionIndex = 0;
+    let score = 0;
 
-            if (selectedAnswer === currentQuestion.correct) {
-                button.style.backgroundColor = 'green';
-                explanationElement.style.display = 'block';
-                explanationElement.innerText = currentQuestion.explanation;
-                score++;
-                disableButtons();
-                nextBtn.style.display = 'block';
-            } else {
-                button.style.backgroundColor = 'red';
-                explanationElement.style.display = 'block';
-                explanationElement.innerText = "오답입니다. 다시 시도해보세요.";
-            }
-        }
+    function loadQuestion() {
+        const currentQuestion = quizData[currentQuestionIndex];
+        const questionElement = document.getElementById('question');
+        const answersElement = document.getElementById('answers');
+        const explanationElement = document.getElementById('explanation');
+        const nextBtn = document.getElementById('next-btn');
 
-        function disableButtons() {
-            const buttons = document.querySelectorAll('.answers button');
-            buttons.forEach(button => button.disabled = true);
-        }
+        questionElement.innerText = currentQuestion.question;
+        answersElement.innerHTML = '';
+        explanationElement.style.display = 'none';
+        explanationElement.innerText = '';
 
-        document.getElementById('next-btn').addEventListener('click', () => {
-            currentQuestionIndex++;
-            if (currentQuestionIndex < quizData.length) {
-                loadQuestion();
-            } else {
-                document.getElementById('question').innerText = `퀴즈 완료! 당신의 점수는 ${score}/${quizData.length} 입니다.`;
-                document.getElementById('answers').innerHTML = '';
-                document.getElementById('next-btn').style.display = 'none';
-                document.getElementById('explanation').innerText = '';
-            }
+        currentQuestion.answers.forEach(answer => {
+            const button = document.createElement('button');
+            button.innerText = answer;
+            button.addEventListener('click', () => checkAnswer(answer, button));
+            answersElement.appendChild(button);
         });
 
-        loadQuestion();
-    </script>
+        nextBtn.style.display = 'none';
+    }
+
+    function checkAnswer(selectedAnswer, button) {
+        const currentQuestion = quizData[currentQuestionIndex];
+        const explanationElement = document.getElementById('explanation');
+        const nextBtn = document.getElementById('next-btn');
+
+        if (selectedAnswer === currentQuestion.correct) {
+            button.classList.add('correct');
+            explanationElement.style.display = 'block';
+            explanationElement.innerText = currentQuestion.explanation;
+            score++;
+            disableButtons();
+            nextBtn.style.display = 'block';
+        } else {
+            button.classList.add('incorrect');
+            explanationElement.style.display = 'block';
+            explanationElement.innerText = "오답입니다. 다시 시도해보세요.";
+        }
+    }
+
+    function disableButtons() {
+        const buttons = document.querySelectorAll('.answers button');
+        buttons.forEach(button => button.disabled = true);
+    }
+
+    document.getElementById('next-btn').addEventListener('click', () => {
+        currentQuestionIndex++;
+        if (currentQuestionIndex < quizData.length) {
+            loadQuestion();
+        } else {
+            document.getElementById('question').innerText = `퀴즈 완료! 당신의 점수는 ${score}/${quizData.length} 입니다.`;
+            document.getElementById('answers').innerHTML = '';
+            document.getElementById('next-btn').style.display = 'none';
+            document.getElementById('explanation').innerText = '';
+        }
+    });
+
+    loadQuestion();
+</script>
+
 </body>
 </html>
 
