--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             question: "Emily sat silently, with the dog __________ at her feet.",
             answers: ["dozing", "dozed", "doze", "does"],
             correct: "dozing",
-            explanation: "문장에서 'with + 명사 + 분사' 구조를 사용하고 있습니다. 'dozing'은 현재 진행 중인 동작을 나타냅니다."
+            explanation: "문장에서 'with + 명사 + 분사' 구조를 사용하고 있습니다. 'dozing'은 능동적인 동작을 나타냅니다."
         },
         {
             question: "By the time I finish that, I __________ the basics of genetic engineering.",
@@ -99,13 +99,13 @@
             question: "This is the new movie __________ many critics think will be nominated for the Academy Awards this year.",
             answers: ["what", "which", "that", "who"],
             correct: "which",
-            explanation: "'which'는 관계대명사로서 선행사를 수식하며, 이 경우는 비제한적 용법입니다."
+            explanation: "'which'는 관계대명사로서 선행사를 수식하며, 이 경우는 비제한적 용법입니다. 하지만 'that'도 사용 가능합니다"
         },
         {
             question: "The truck sped away with smoke __________ out of it.",
             answers: ["pours", "pouring", "poured", "pour"],
             correct: "pouring",
-            explanation: "'with + 명사 + 분사'에서 현재 진행 중인 동작을 나타내는 현재분사 'pouring'이 맞습니다."
+            explanation: "'with + 명사 + 분사'에서 능동적인 동작을 나타내는 현재분사 'pouring'이 맞습니다."
         },
         {
             question: "I wish I __________ a famous movie star now.",
@@ -121,7 +121,7 @@
         },
         {
             question: "With his book __________, he is standing by the bookshelf.",
-            answers: ["with", "closed", "is standing", "opened"],
+            answers: ["with", "closed", "is standing", "opening"],
             correct: "closed",
             explanation: "'with + 명사 + 분사'에서 분사 'closed'는 책이 닫힌 상태를 설명합니다."
         },
@@ -129,7 +129,7 @@
             question: "I talked with the scientist __________ people believe invented the new device.",
             answers: ["that", "which", "who", "whom"],
             correct: "who",
-            explanation: "'who'는 사람을 나타내는 관계대명사로서 올바른 사용입니다."
+            explanation: "'who'는 사람을 나타내는 관계대명사로서 올바른 사용입니다.하지만 'that'도 사용 가능합니다"
         }
     ];
 
